--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,21 +2,21 @@
     font-family: Lato;
     font-style: normal;
     font-weight: 300;
-    src: local("Lato Light"), local("Lato-Light"), url(../fonts/Lato-Light.woff2?72443) format("woff2"), url(../fonts/Lato-Light.woff?90301) format("woff")
+    src: local("Lato Light"), local("Lato-Light"), url(../fonts/Lato-Light.woff2) format("woff2"), url(../fonts/Lato-Light.woff) format("woff")
 }
 
 @font-face {
     font-family: Lato;
     font-style: normal;
     font-weight: 400;
-    src: local("Lato Regular"), local("Lato-Regular"), url(../fonts/Lato-Regular.woff2?bd03a) format("woff2"), url(../fonts/Lato-Regular.woff?27bd7) format("woff")
+    src: local("Lato Regular"), local("Lato-Regular"), url(../fonts/Lato-Regular.woff2) format("woff2"), url(../fonts/Lato-Regular.woff) format("woff")
 }
 
 @font-face {
     font-family: Lato;
     font-style: normal;
     font-weight: 700;
-    src: local("Lato Bold"), local("Lato-Bold"), url(../fonts/Lato-Bold.woff2?cccb8) format("woff2"), url(../fonts/Lato-Bold.woff?d878b) format("woff")
+    src: local("Lato Bold"), local("Lato-Bold"), url(../fonts/Lato-Bold.woff2) format("woff2"), url(../fonts/Lato-Bold.woff) format("woff")
 }
 
 html {
@@ -103,10 +103,14 @@ svg:not(:root) {
     text-align: center
 }
 
+.page-header__top {
+    background-color: white;
+    opacity: .4;
+}
 @media (min-width: 480px) {
     .page-header {
-        height: 400px;
-        background: #838b8e url(../images/header.png?023a7) 50% 50% no-repeat;
+        height: 600px;
+        background: #838b8e url(../images/header.png) 50% 50% no-repeat;
         background-size: cover;
         color: #fff
     }
@@ -127,7 +131,7 @@ svg:not(:root) {
     .page-header__top-inner {
         display: flex;
         max-width: 1140px;
-        height: 90px;
+        height: 110px;
         margin: auto;
         align-items: center;
         justify-content: space-between;
@@ -135,7 +139,7 @@ svg:not(:root) {
     }
 
     .page-header__top--fixed .page-header__top-inner {
-        height: 50px
+        height: 80px
     }
 
     .page-header__logo {
@@ -166,7 +170,7 @@ svg:not(:root) {
     .page-header__main {
         max-width: 1140px;
         margin: 0 auto;
-        padding-top: 90px;
+        padding-top: 110px;
         text-align: center
     }
 }
