--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -69,11 +69,11 @@ a:focus, a:hover {
 img {
     border-style: none;
     max-width: 100%;
-    height: auto
+    height: auto;
 }
 
 svg:not(:root) {
-    overflow: hidden
+    overflow: hidden;
 }
 
 .icon {
@@ -81,16 +81,16 @@ svg:not(:root) {
     width: 16px;
     height: 16px;
     vertical-align: -3px;
-    fill: currentColor
+    fill: currentColor;
 }
 
 .page-header {
     background-color: #838b8e;
-    color: #fff
+    color: #fff;
 }
 
 .page-header__logo {
-    display: none
+    display: none;
 }
 
 .page-header__inner {
@@ -100,78 +100,81 @@ svg:not(:root) {
 
 .page-header__main {
     padding-top: 12px;
-    text-align: center
+    text-align: center;
 }
 
 .page-header__top {
     background-color: white;
-    opacity: .4;
+    opacity: 0.7;
+    /*transform: scaleX(0);*/
+    /*transform-origin: left center;*/
+    transition: all .25s ease-out;
 }
 @media (min-width: 480px) {
     .page-header {
         height: 600px;
         background: #838b8e url(../images/header.png) 50% 50% no-repeat;
         background-size: cover;
-        color: #fff
+        color: #fff;
     }
 
     .page-header__top {
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%
+        width: 100%;
     }
 
     .page-header__top--fixed {
         background-color: #fff;
         box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
-        transition: background-color .3s cubic-bezier(.4, 0, .2, 1) 0ms
+        transition: background-color .3s cubic-bezier(.4, 0, .2, 1) 0ms;
     }
 
     .page-header__top-inner {
         display: flex;
         max-width: 1140px;
-        height: 110px;
+        height: 100px;
         margin: auto;
         align-items: center;
         justify-content: space-between;
-        transition: height .3s cubic-bezier(.4, 0, .2, 1) 0ms
+        transition: height .3s cubic-bezier(.4, 0, .2, 1) 0ms;
     }
 
     .page-header__top--fixed .page-header__top-inner {
-        height: 80px
+        height: 80px;
     }
 
     .page-header__logo {
         display: inline-block;
-        margin: 0 24px
+        margin: 0 24px;
     }
 
     .page-header__logo, .page-header__logo:active, .page-header__logo:focus, .page-header__logo:hover {
-        color: #fff
+        color: #fff;
     }
 
     .page-header__top--fixed .page-header__logo, .page-header__top--fixed .page-header__logo:active, .page-header__top--fixed .page-header__logo:focus, .page-header__top--fixed .page-header__logo:hover {
-        color: #444
+        color: #444;
     }
 
     .page-header__logo-image {
         display: block;
         width: 91px;
         height: 38px;
-        transition: height .3s cubic-bezier(.4, 0, .2, 1) 0ms
+        transition: height .3s cubic-bezier(.4, 0, .2, 1) 0ms;
     }
 
     .page-header__top--fixed .page-header__logo-image {
         width: auto;
-        height: 28px
+        height: 28px;
     }
 
     .page-header__main {
         max-width: 1140px;
         margin: 0 auto;
         padding-top: 110px;
-        text-align: center
+        text-align: center;
     }
 }
 
@@ -211,7 +214,7 @@ svg:not(:root) {
     padding: 0 20px;
     white-space: nowrap;
     line-height: 30px;
-    color: #fff;
+    color: #415875;
     font-size: 16px;
     text-transform: uppercase;
     text-decoration: none
@@ -222,7 +225,7 @@ svg:not(:root) {
     display: block;
     height: 3px;
     width: 100%;
-    background-color: #53bce6;
+    background-color: #415875;
     opacity: 0;
     transform: scaleX(0);
     transform-origin: left center;
@@ -235,12 +238,12 @@ svg:not(:root) {
 }
 
 .main-nav__link:active, .main-nav__link:focus, .main-nav__link:hover {
-    color: #fff;
+    color: gray;
     text-decoration: none
 }
 
 .page-header__top--fixed .main-nav__link:active, .page-header__top--fixed .main-nav__link:focus, .page-header__top--fixed .main-nav__link:hover {
-    color: #444
+    color: gray;
 }
 
 .main-nav__link:active:after, .main-nav__link:focus:after, .main-nav__link:hover:after {
@@ -253,7 +256,7 @@ svg:not(:root) {
     margin: 0 auto;
     padding: 12px 24px;
     color: hsla(0, 0%, 100%, .8);
-    background-color: rgba(3, 173, 228, .6);
+    background-color: #415875;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24)
 }
 
