--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -109,6 +109,8 @@ svg:not(:root) {
     /*transform: scaleX(0);*/
     /*transform-origin: left center;*/
     transition: all .25s ease-out;
+    border-bottom: 1px solid #34404e;
+
 }
 @media (min-width: 480px) {
     .page-header {
@@ -134,7 +136,7 @@ svg:not(:root) {
     .page-header__top-inner {
         display: flex;
         max-width: 1140px;
-        height: 100px;
+        height: 80px;
         margin: auto;
         align-items: center;
         justify-content: space-between;
@@ -173,7 +175,7 @@ svg:not(:root) {
     .page-header__main {
         max-width: 1140px;
         margin: 0 auto;
-        padding-top: 110px;
+        padding-top: 80px;
         text-align: center;
     }
 }
