--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -177,6 +177,7 @@ svg:not(:root) {
         margin: 0 auto;
         padding-top: 80px;
         text-align: center;
+        opacity: 1;
     }
 }
 
